Fix media blocks spacing on frontend and editor

--- a/packages/block-library/src/blocks/media/editor-styles.scss
+++ b/packages/block-library/src/blocks/media/editor-styles.scss
@@ -29,12 +29,12 @@
 }
 
 .novablocks-media__inner-container {
-	padding-left: var(--novablocks-media-spacing);
-	padding-right: var(--novablocks-media-spacing);
+	padding-left: var(--novablocks-spacing);
+	padding-right: var(--novablocks-spacing);
 
 	> [data-align='full'] {
-		margin-left: calc(-1 * var(--novablocks-media-spacing));
-		margin-right: calc(-1 * var(--novablocks-media-spacing));
+		margin-left: calc(-1 * var(--novablocks-spacing));
+		margin-right: calc(-1 * var(--novablocks-spacing));
 	}
 }
 
