--- a/packages/block-library/src/blocks/media/style.scss
+++ b/packages/block-library/src/blocks/media/style.scss
@@ -53,34 +53,34 @@
 }
 
 .novablocks-media {
+  --novablocks-spacing: var(--novablocks-media-spacing);
+
   --block-top-spacing: var(--novablocks-block-top-spacing, 0);
   --block-bottom-spacing: var(--novablocks-block-bottom-spacing, 0);
   --emphasis-top-spacing: var(--novablocks-emphasis-top-spacing, 0);
   --emphasis-bottom-spacing: var(--novablocks-emphasis-bottom-spacing, 0);
 
   &[class][class] {
-    margin-top: 0;
-    margin-bottom: 0;
     padding-top: 0;
     padding-bottom: 0;
   }
 
 	@include above(tablet) {
-		margin-top: calc( var(--block-top-spacing) * var(--novablocks-media-spacing) );
-		margin-bottom: calc( var(--block-bottom-spacing) * var(--novablocks-media-spacing) );
+		margin-top: calc( var(--block-top-spacing) * var(--novablocks-spacing) );
+		margin-bottom: calc( var(--block-bottom-spacing) * var(--novablocks-spacing) );
 
-		padding-top: calc( -1 * var(--emphasis-top-spacing) * var(--novablocks-media-spacing) );
-		padding-bottom: calc( -1 * var(--emphasis-bottom-spacing) * var(--novablocks-media-spacing) );
+		padding-top: calc( -1 * var(--emphasis-top-spacing) * var(--novablocks-spacing) );
+		padding-bottom: calc( -1 * var(--emphasis-bottom-spacing) * var(--novablocks-spacing) );
 
 		.components-placeholder,
 		.novablocks-advanced-gallery {
-			margin-top: calc( var(--emphasis-top-spacing) * var(--novablocks-media-spacing) );
-			margin-bottom: calc( var(--emphasis-bottom-spacing) * var(--novablocks-media-spacing) );
+			margin-top: calc( var(--emphasis-top-spacing) * var(--novablocks-spacing) );
+			margin-bottom: calc( var(--emphasis-bottom-spacing) * var(--novablocks-spacing) );
 		}
 
 		.novablocks-media__content {
-			padding-top: calc( var(--emphasis-top-spacing) * var(--novablocks-media-spacing) );
-			padding-bottom: calc( var(--emphasis-bottom-spacing) * var(--novablocks-media-spacing) );
+			padding-top: calc( var(--emphasis-top-spacing) * var(--novablocks-spacing) );
+			padding-bottom: calc( var(--emphasis-bottom-spacing) * var(--novablocks-spacing) );
 		}
 	}
 
